MET-6890: Retrieve service references for IIIF and OEMBED resources while deserializing.